--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -38,7 +38,7 @@
             android:id="@+id/content_frame"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
-        <!-- The navigation drawer -->
+        <!-- The navigation drawer  ? -->
 
         <ListView
             android:id="@+id/left_drawer"
