--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -6,7 +6,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".MainActivity" >
+    tools:context=".MainActivity"
+    android:id="@+id/main_root" >
 
     <ProgressBar
         android:id="@+id/main_progressbar"
