--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -1,9 +1,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
-    <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:showAsAction="never"
-        android:title="@string/action_settings"/>
+    <group android:id="@+id/hide_when_drawer" >
+        <item
+            android:id="@+id/action_refresh"
+            android:icon="@drawable/ic_action_refresh"
+            android:orderInCategory="100"
+            android:showAsAction="ifRoom"
+            android:title="@string/action_refresh"/>
+    </group>
 
 </menu>
