--- a/res/layout-land/activity_main.xml
+++ b/res/layout-land/activity_main.xml
@@ -20,7 +20,7 @@
     
     <TextView
         android:id="@+id/main_percentage"
-        android:gravity="bottom"
+        android:gravity="right"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
@@ -32,8 +32,8 @@
         android:id="@+id/main_xyplot_main"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="top"
-        android:layout_above="@id/main_percentage"
+        android:gravity="left"
+        android:layout_toLeftOf="@id/main_percentage"
         android:visibility="invisible"
         androidPlot.domainLabel="XAXIS"
         androidPlot.domainLabelWidget.labelPaint.textSize="@dimen/domain_label_font_size"
