--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
+<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" 
+    			  android:id="@+id/settings_framgent">
     <PreferenceCategory android:title="@string/generation_types_header" >
         <CheckBoxPreference
             android:defaultValue="@bool/gen_0_default"
