--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" 
-    			  android:id="@+id/settings_framgent">
+<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
     <PreferenceCategory android:title="@string/generation_types_header" >
         <CheckBoxPreference
             android:defaultValue="@bool/gen_0_default"
@@ -92,5 +91,10 @@
             android:key="@string/gen_17_key"
             android:summary="@string/gen_17_subtitle"
             android:title="@string/gen_17_title" />
+        <Preference 
+            android:title="@string/reset_defaults" 
+            android:summary="@string/reset_summary"
+            android:key="defaultreset" />
+        
     </PreferenceCategory>
 </PreferenceScreen>
