--- a/res/xml/line_point_formatter_with_plf1.xml
+++ b/res/xml/line_point_formatter_with_plf1.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <config
         linePaint.strokeWidth="3dp"
-        linePaint.color="#00AA00"
+        linePaint.color="#00FF00"
         fillPaint.color="#00000000"/>
