--- a/res/layout/widget_layout.xml
+++ b/res/layout/widget_layout.xml
@@ -1,15 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-  android:layout_width="match_parent"
-  android:layout_height="match_parent"
-  android:padding="@dimen/widget_margin"
-  android:id="@+id/watttime_appwidget">
-
-  <LinearLayout
+    android:id="@+id/watttime_appwidget"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal"
-    android:background="@drawable/appwidget_background">
-  </LinearLayout>
+    android:padding="@dimen/widget_margin" >
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/appwidget_background"
+        android:orientation="horizontal" >
+
+        <TextView
+            android:id="@+id/widget_percentage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="%XX" >
+        </TextView>
+    </RelativeLayout>
 
 </FrameLayout>
