--- a/res/values-v14/styles.xml
+++ b/res/values-v14/styles.xml
@@ -29,6 +29,16 @@
   	<style name="LargeTextAppearance" parent="@android:style/TextAppearance.Large">
     	<item name="android:textColor">#FFFFFF</item>
 	</style>
+	
+  	<style name="GraphStyle">
+  	    
+  	    <item name="android:paddingBottom">0dp</item>
+        <item name="android:paddingLeft">0dp</item>
+        <item name="android:paddingRight">0dp</item>
+        <item name="android:paddingTop">0dp</item>
+        
+        
+  	</style>
     
 
 </resources>
