--- a/res/values-v14/styles.xml
+++ b/res/values-v14/styles.xml
@@ -36,11 +36,8 @@
         <item name="android:paddingLeft">0dp</item>
         <item name="android:paddingRight">0dp</item>
         <item name="android:paddingTop">0dp</item>
-        <item name="android:layout_width">"wrap_content"</item>
-        <item name="android:layout_height">"wrap_content"</item>
-            
-            
-        
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
         
   	</style>
     
