--- a/res/xml/widget.xml
+++ b/res/xml/widget.xml
@@ -3,7 +3,7 @@
     android:minWidth="40dp"
     android:minHeight="40dp"
     android:updatePeriodMillis="3600000"
-    android:previewImage="@drawable/widget_preview"
+    android:previewImage="@drawable/ic_launcher"
     android:initialLayout="@layout/widget_layout"
     android:resizeMode="horizontal"
     android:widgetCategory="home_screen|keyguard"
