--- a/res/values-v14/styles.xml
+++ b/res/values-v14/styles.xml
@@ -19,6 +19,8 @@
     <style name="WattTimeBar" parent="@android:style/Widget.Holo.Light.ActionBar">
         <item name="android:background">#002C3C</item>
         <item name="android:titleTextStyle">@style/WattTimeActionBarTitleText</item>
+        <item name="android:icon">@drawable/ic_action_bar_logo</item>
+        <item name="android:displayOptions">showHome|useLogo</item>
     </style>
     
         <!-- ActionBar title text -->
