Reverting changes on widget layout.

--- a/res/layout/widget_layout.xml
+++ b/res/layout/widget_layout.xml
@@ -6,16 +6,22 @@
     android:background="@drawable/appwidget_background"
     android:padding="@dimen/widget_margin" >
 
-    <TextView
-        android:id="@+id/widget_percentage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal" >
 
-    <ImageView
-        android:id="@+id/widget_stoplight"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:contentDescription="@string/widget_alt_text"
-        android:drawable="@drawable/ic_action_settings" />
+        <TextView
+            android:id="@+id/widget_percentage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+        <ImageView
+            android:id="@+id/widget_stoplight"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:drawable="@drawable/ic_action_settings"
+            android:contentDescription="@string/widget_alt_text" />
+    </RelativeLayout>
 
 </FrameLayout>
