--- a/res/values-v14/styles.xml
+++ b/res/values-v14/styles.xml
@@ -21,6 +21,7 @@
         <item name="android:titleTextStyle">@style/WattTimeActionBarTitleText</item>
         <item name="android:icon">@drawable/ic_action_bar_logo</item>
         <item name="android:displayOptions">showHome|useLogo</item>
+        <!-- TODO, fix selection bounds/selection color -->
     </style>
     
         <!-- ActionBar title text -->
@@ -42,6 +43,5 @@
         <item name="android:layout_height">wrap_content</item>
         
   	</style>
-    
 
 </resources>
