Fixed graph display, actually displays now. Please see notes in the layout file to avoid this in the future

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -41,7 +41,6 @@
             androidPlot.rangeLabelWidget.labelPaint.textSize="@dimen/range_label_font_size"
             androidPlot.rangeLabel="@string/graph_y_axis"
         	androidPlot.title="@string/graph_title"
-        	androidPlot.renderMode="use_background_thread"
             
             androidPlot.graphWidget.rangeLabelPaint.textSize="@dimen/range_tick_label_font_size"
             androidPlot.graphWidget.rangeOriginLabelPaint.textSize="@dimen/range_tick_label_font_size"
@@ -64,6 +63,8 @@
             android:gravity="top"
             
             android:visibility="invisible" />
+        <!-- DO NOT ADD androidPlot.renderMode="use_background_thread"
+        	 Seeems like a good idea right?! No, it breaks the graph... -->
     </RelativeLayout>
     <!-- The navigation drawer -->
 
