--- a/res/layout/widget_layout.xml
+++ b/res/layout/widget_layout.xml
@@ -1,26 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/watttime_appwidget"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/appwidget_background"
+    android:background="#CCCCCB"
     android:padding="@dimen/widget_margin" >
+    
+     <ImageView
+        android:id="@+id/widget_stoplight_1"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_alignParentTop="false"
+        android:layout_centerInParent="true"
+        android:padding="6sp"
+        android:contentDescription="@string/widget_alt_text" />
+    
+    <TextView
+        android:id="@+id/widget_percentage_2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:gravity="center"
+        android:textColor="#000000"
+        android:textSize="25sp" />
+    
+   
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal" >
 
-        <TextView
-            android:id="@+id/widget_percentage"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+    
 
-        <ImageView
-            android:id="@+id/widget_stoplight"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:contentDescription="@string/widget_alt_text" />
-    </RelativeLayout>
-
-</FrameLayout>
+</RelativeLayout>
